# ogre-next

./: .gitmodules  BUILD.bazel  meson.build  run
Components/: meson.build
Components/Hlms/: meson.build
Components/Hlms/Common/: BUILD  meson.build
Components/Hlms/Pbs/: BUILD  meson.build
Components/Hlms/Unlit/: BUILD  meson.build
Components/Overlay/: BUILD  meson.build
Components/Overlay/src/: OgreFont.cpp
Components/SceneFormat/: BUILD
OgreMain/: BUILD  meson.build
OgreMain/hardcoded/mac/: OgreBuildSettings.h
OgreMain/hardcoded/win32/: OgreBuildSettings.h
OgreMain/include/: OgreBuildSettings.h  OgreSearchOps.h
OgreMain/src/: OgrePVRTCCodec.cpp  OgreSearchOps.cpp
RenderSystems/: meson.build
RenderSystems/GL3Plus/: BUILD  meson.build
RenderSystems/GL3Plus/src/windowing/win32/: OgreWin32Window.cpp
Samples/: meson.build
Samples/2.0/: meson.build
Samples/2.0/Common/: BUILD  meson.build
Samples/2.0/Common/include/: GameState.h  GraphicsSystem.h  InputListeners.h  SdlInputHandler.h
Samples/2.0/Common/include/System/: MainEntryPoints.h
Samples/2.0/Common/src/: GraphicsSystem.cpp  LogicSystem.cpp  SdlInputHandler.cpp  TutorialGameState.cpp
Samples/2.0/Common/src/System/Desktop/: MainLoopSingleThreaded.cpp
Samples/2.0/Tutorials/: meson.build
Samples/2.0/Tutorials/Tutorial00_Basic/: BUILD  meson.build
Samples/2.0/Tutorials/Tutorial04_InterpolationLoop/: BUILD  GraphicsGameState.h  meson.build
Samples/2.0/Tutorials/Tutorial_OpenVR/: BUILD  Tutorial_OpenVRGameState.cpp  meson.build
Samples/Media/: BUILD
Samples/Media/2.0/scripts/Compositors/: Tutorial_OpenVRWorkspace.compositor
hardcoded/include/: OgreBuildSettings.h
hardcoded/include/linux/: OgreBuildSettings.h
hardcoded/include/win32/: OgreBuildSettings.h
