package(default_visibility = ["//visibility:public"])

cc_import(
    name = "OgreMainDllBin",
    shared_library    = "build/bin/debug/OgreMain_d.dll",
    #static_library   = "build/lib/Debug/OgreMain_d.lib",
    interface_library = "build/lib/Debug/OgreMain_d.lib",
)

cc_library(
    name = "OgreMainDll",
    deps = ["OgreMainDllBin"],
    includes = [
        #'OgreMain/include/NaCl',
        #'OgreMain/include/Android',
        'OgreMain/include',
        #'OgreMain/include/GLX',
        'OgreMain/include/gtk',
        #'OgreMain/include/iOS',
        'OgreMain/include/Vao',
        'OgreMain/include/Math',
        'OgreMain/include/Math/Array',
        'OgreMain/include/Math/Array/C',
        'OgreMain/include/Math/Array/SSE2',
        'OgreMain/include/Math/Array/SSE2/Single',
        'OgreMain/include/Math/Array/NEON',
        'OgreMain/include/Math/Array/NEON/Single',
        'OgreMain/include/Math/Simple',
        'OgreMain/include/Math/Simple/C',
        'OgreMain/include/Compute',
        'OgreMain/include/debugbreak',
        'OgreMain/include/Hash',
        'OgreMain/include/Animation',
        'OgreMain/include/Threading',
        'OgreMain/include/Emscripten',
        'OgreMain/include/WIN32',
        'OgreMain/include/CommandBuffer',
        'OgreMain/include/Compositor',
        'OgreMain/include/Compositor/Pass',
        'OgreMain/include/Compositor/Pass/PassCompute',
        'OgreMain/include/Compositor/Pass/PassStencil',
        'OgreMain/include/Compositor/Pass/PassScene',
        'OgreMain/include/Compositor/Pass/PassUav',
        'OgreMain/include/Compositor/Pass/PassClear',
        'OgreMain/include/Compositor/Pass/PassQuad',
        'OgreMain/include/Compositor/Pass/PassMipmap',
        'OgreMain/include/Compositor/Pass/PassDepthCopy',
        'build/include',
    ],
    hdrs = [
        #'OgreMain/include/Android/OgreAPKFileSystemArchive.h',
        #'OgreMain/include/Android/OgreAPKZipArchive.h',
        #'OgreMain/include/Android/OgreAndroidLogListener.h',
        #'OgreMain/include/Android/OgreConfigDialogImp.h',
        #'OgreMain/include/Android/OgreErrorDialogImp.h',
        #'OgreMain/include/Android/OgreTimerImp.h',
        'OgreMain/include/Animation/OgreBone.h',
        'OgreMain/include/Animation/OgreBone.inl',
        'OgreMain/include/Animation/OgreSkeletonAnimManager.h',
        'OgreMain/include/Animation/OgreSkeletonAnimation.h',
        'OgreMain/include/Animation/OgreSkeletonAnimationDef.h',
        'OgreMain/include/Animation/OgreSkeletonDef.h',
        'OgreMain/include/Animation/OgreSkeletonInstance.h',
        'OgreMain/include/Animation/OgreSkeletonManager.h',
        'OgreMain/include/Animation/OgreSkeletonTrack.h',
        'OgreMain/include/Animation/OgreTagPoint.h',
        'OgreMain/include/CommandBuffer/OgreCbCommon.h',
        'OgreMain/include/CommandBuffer/OgreCbDrawCall.h',
        'OgreMain/include/CommandBuffer/OgreCbLowLevelMaterial.h',
        'OgreMain/include/CommandBuffer/OgreCbPipelineStateObject.h',
        'OgreMain/include/CommandBuffer/OgreCbShaderBuffer.h',
        'OgreMain/include/CommandBuffer/OgreCbTexture.h',
        'OgreMain/include/CommandBuffer/OgreCommandBuffer.h',
        'OgreMain/include/Compositor/OgreCompositorChannel.h',
        'OgreMain/include/Compositor/OgreCompositorCommon.h',
        'OgreMain/include/Compositor/OgreCompositorManager2.h',
        'OgreMain/include/Compositor/OgreCompositorNamedBuffer.h',
        'OgreMain/include/Compositor/OgreCompositorNode.h',
        'OgreMain/include/Compositor/OgreCompositorNodeDef.h',
        'OgreMain/include/Compositor/OgreCompositorShadowNode.h',
        'OgreMain/include/Compositor/OgreCompositorShadowNodeDef.h',
        'OgreMain/include/Compositor/OgreCompositorWorkspace.h',
        'OgreMain/include/Compositor/OgreCompositorWorkspaceDef.h',
        'OgreMain/include/Compositor/OgreCompositorWorkspaceListener.h',
        'OgreMain/include/Compositor/OgreTextureDefinition.h',
        'OgreMain/include/Compositor/Pass/OgreCompositorPass.h',
        'OgreMain/include/Compositor/Pass/OgreCompositorPassDef.h',
        'OgreMain/include/Compositor/Pass/OgreCompositorPassProvider.h',
        'OgreMain/include/Compositor/Pass/PassClear/OgreCompositorPassClear.h',
        'OgreMain/include/Compositor/Pass/PassClear/OgreCompositorPassClearDef.h',
        'OgreMain/include/Compositor/Pass/PassCompute/OgreCompositorPassCompute.h',
        'OgreMain/include/Compositor/Pass/PassCompute/OgreCompositorPassComputeDef.h',
        'OgreMain/include/Compositor/Pass/PassDepthCopy/OgreCompositorPassDepthCopy.h',
        'OgreMain/include/Compositor/Pass/PassDepthCopy/OgreCompositorPassDepthCopyDef.h',
        'OgreMain/include/Compositor/Pass/PassMipmap/OgreCompositorPassMipmap.h',
        'OgreMain/include/Compositor/Pass/PassMipmap/OgreCompositorPassMipmapDef.h',
        'OgreMain/include/Compositor/Pass/PassQuad/OgreCompositorPassQuad.h',
        'OgreMain/include/Compositor/Pass/PassQuad/OgreCompositorPassQuadDef.h',
        'OgreMain/include/Compositor/Pass/PassScene/OgreCompositorPassScene.h',
        'OgreMain/include/Compositor/Pass/PassScene/OgreCompositorPassSceneDef.h',
        'OgreMain/include/Compositor/Pass/PassStencil/OgreCompositorPassStencil.h',
        'OgreMain/include/Compositor/Pass/PassStencil/OgreCompositorPassStencilDef.h',
        'OgreMain/include/Compositor/Pass/PassUav/OgreCompositorPassUav.h',
        'OgreMain/include/Compositor/Pass/PassUav/OgreCompositorPassUavDef.h',
        'OgreMain/include/Compute/OgreComputeTools.h',
        # 'OgreMain/include/Deprecated/OgreDDSCodec.h',
        # 'OgreMain/include/Deprecated/OgreDepthBuffer.h',
        # 'OgreMain/include/Deprecated/OgreFreeImageCodec.h',
        # 'OgreMain/include/Deprecated/OgreHardwarePixelBuffer.h',
        # 'OgreMain/include/Deprecated/OgreImage.h',
        # 'OgreMain/include/Deprecated/OgreImageCodec.h',
        # 'OgreMain/include/Deprecated/OgrePixelBox.h',
        # 'OgreMain/include/Deprecated/OgrePixelFormat.h',
        # 'OgreMain/include/Deprecated/OgrePixelFormatDescriptions.h',
        # 'OgreMain/include/Deprecated/OgreRenderTarget.h',
        # 'OgreMain/include/Deprecated/OgreRenderTargetListener.h',
        # 'OgreMain/include/Deprecated/OgreRenderTexture.h',
        # 'OgreMain/include/Deprecated/OgreRenderToVertexBuffer.h',
        # 'OgreMain/include/Deprecated/OgreRenderWindow.h',
        # 'OgreMain/include/Deprecated/OgreTexture.h',
        # 'OgreMain/include/Deprecated/OgreTextureManager.h',
        # 'OgreMain/include/Emscripten/OgreConfigDialogImp.h',
        # 'OgreMain/include/Emscripten/OgreErrorDialogImp.h',
        # 'OgreMain/include/Emscripten/OgreTimerImp.h',
        'OgreMain/include/GLX/OgreConfigDialogImp.h',
        'OgreMain/include/GLX/OgreErrorDialogImp.h',
        'OgreMain/include/GLX/OgreTimerImp.h',
        'OgreMain/include/Hash/MurmurHash3.h',
        'OgreMain/include/Math/Array/C/OgreArrayAabb.h',
        'OgreMain/include/Math/Array/C/OgreArrayAabb.inl',
        'OgreMain/include/Math/Array/C/OgreArrayMatrix4.h',
        'OgreMain/include/Math/Array/C/OgreArrayMatrix4.inl',
        'OgreMain/include/Math/Array/C/OgreArrayMatrixAf4x3.h',
        'OgreMain/include/Math/Array/C/OgreArrayMatrixAf4x3.inl',
        'OgreMain/include/Math/Array/C/OgreArrayQuaternion.h',
        'OgreMain/include/Math/Array/C/OgreArrayQuaternion.inl',
        'OgreMain/include/Math/Array/C/OgreArraySphere.h',
        'OgreMain/include/Math/Array/C/OgreArraySphere.inl',
        'OgreMain/include/Math/Array/C/OgreArrayVector3.h',
        'OgreMain/include/Math/Array/C/OgreArrayVector3.inl',
        'OgreMain/include/Math/Array/C/OgreBooleanMask.h',
        'OgreMain/include/Math/Array/C/OgreBooleanMask.inl',
        'OgreMain/include/Math/Array/C/OgreMathlibC.h',
        'OgreMain/include/Math/Array/C/OgreMathlibC.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayAabb.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayAabb.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayMatrix4.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayMatrix4.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayMatrixAf4x3.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayMatrixAf4x3.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayQuaternion.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayQuaternion.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArraySphere.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArraySphere.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayVector3.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreArrayVector3.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreBooleanMask.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreBooleanMask.inl',
        'OgreMain/include/Math/Array/NEON/Single/OgreMathlibNEON.h',
        'OgreMain/include/Math/Array/NEON/Single/OgreMathlibNEON.inl',
        'OgreMain/include/Math/Array/NEON/Single/neon_mathfun.h',
        'OgreMain/include/Math/Array/OgreArrayAabb.h',
        'OgreMain/include/Math/Array/OgreArrayConfig.h',
        'OgreMain/include/Math/Array/OgreArrayMatrix4.h',
        'OgreMain/include/Math/Array/OgreArrayMatrixAf4x3.h',
        'OgreMain/include/Math/Array/OgreArrayMemoryManager.h',
        'OgreMain/include/Math/Array/OgreArrayQuaternion.h',
        'OgreMain/include/Math/Array/OgreArrayRay.h',
        'OgreMain/include/Math/Array/OgreArraySphere.h',
        'OgreMain/include/Math/Array/OgreArrayVector3.h',
        'OgreMain/include/Math/Array/OgreBoneArrayMemoryManager.h',
        'OgreMain/include/Math/Array/OgreBoneMemoryManager.h',
        'OgreMain/include/Math/Array/OgreBoneTransform.h',
        'OgreMain/include/Math/Array/OgreBooleanMask.h',
        'OgreMain/include/Math/Array/OgreKfTransform.h',
        'OgreMain/include/Math/Array/OgreKfTransformArrayMemoryManager.h',
        'OgreMain/include/Math/Array/OgreMathlib.h',
        'OgreMain/include/Math/Array/OgreNodeMemoryManager.h',
        'OgreMain/include/Math/Array/OgreObjectData.h',
        'OgreMain/include/Math/Array/OgreObjectMemoryManager.h',
        'OgreMain/include/Math/Array/OgreTransform.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayAabb.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayAabb.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayMatrix4.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayMatrix4.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayMatrixAf4x3.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayMatrixAf4x3.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayQuaternion.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayQuaternion.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArraySphere.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArraySphere.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayVector3.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreArrayVector3.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreBooleanMask.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreBooleanMask.inl',
        'OgreMain/include/Math/Array/SSE2/Single/OgreMathlibSSE2.h',
        'OgreMain/include/Math/Array/SSE2/Single/OgreMathlibSSE2.inl',
        'OgreMain/include/Math/Array/SSE2/Single/sse_mathfun.h',
        'OgreMain/include/Math/Simple/C/OgreAabb.h',
        'OgreMain/include/Math/Simple/C/OgreAabb.inl',
        'OgreMain/include/Math/Simple/OgreAabb.h',
        # 'OgreMain/include/NaCl/OgreConfigDialogImp.h',
        # 'OgreMain/include/NaCl/OgreErrorDialogImp.h',
        # 'OgreMain/include/NaCl/OgreTimerImp.h',
        # 'OgreMain/include/OSX/OgreConfigDialogImp.h',
        # 'OgreMain/include/OSX/OgreErrorDialogImp.h',
        # 'OgreMain/include/OSX/OgreTimerImp.h',
        # 'OgreMain/include/OSX/Ogre_Prefix.pch',
        # 'OgreMain/include/OSX/macUtils.h',
        # 'OgreMain/include/OSX/nib/config.nib/classes.nib',
        # 'OgreMain/include/OSX/nib/config.nib/info.nib',
        # 'OgreMain/include/OSX/nib/config.nib/keyedobjects.nib',
        # 'OgreMain/include/OSX/nib/config.nib/objects.nib',
        # 'OgreMain/include/OSX/nib/main.nib/classes.nib',
        # 'OgreMain/include/OSX/nib/main.nib/info.nib',
        # 'OgreMain/include/OSX/nib/main.nib/objects.xib',
        # 'OgreMain/include/OSX/ogrelogo.png',
        'OgreMain/include/Ogre.h',
        'OgreMain/include/OgreASTCCodec.h',
        'OgreMain/include/OgreAlignedAllocator.h',
        'OgreMain/include/OgreAnimable.h',
        'OgreMain/include/OgreAnimation.h',
        'OgreMain/include/OgreAnimationState.h',
        'OgreMain/include/OgreAnimationTrack.h',
        'OgreMain/include/OgreAny.h',
        'OgreMain/include/OgreArchive.h',
        'OgreMain/include/OgreArchiveFactory.h',
        'OgreMain/include/OgreArchiveManager.h',
        'OgreMain/include/OgreAssert.h',
        'OgreMain/include/OgreAsyncTextureTicket.h',
        'OgreMain/include/OgreAtomicObject.h',
        'OgreMain/include/OgreAtomicScalar.h',
        'OgreMain/include/OgreAutoParamDataSource.h',
        'OgreMain/include/OgreAxisAlignedBox.h',
        'OgreMain/include/OgreBillboard.h',
        'OgreMain/include/OgreBillboardChain.h',
        'OgreMain/include/OgreBillboardParticleRenderer.h',
        'OgreMain/include/OgreBillboardSet.h',
        'OgreMain/include/OgreBitset.h',
        'OgreMain/include/OgreBitwise.h',
        'OgreMain/include/OgreBlendMode.h',
        # TODO: Generate this per-platform
        'build/include/OgreBuildSettings.h',
        'OgreMain/include/OgreCamera.h',
        'OgreMain/include/OgreCodec.h',
        'OgreMain/include/OgreColourValue.h',
        'OgreMain/include/OgreCommon.h',
        'OgreMain/include/OgreConfig.h',
        'OgreMain/include/OgreConfigDialog.h',
        'OgreMain/include/OgreConfigFile.h',
        'OgreMain/include/OgreConfigOptionMap.h',
        'OgreMain/include/OgreConstBufferPool.h',
        'OgreMain/include/OgreController.h',
        'OgreMain/include/OgreControllerManager.h',
        'OgreMain/include/OgreConvexBody.h',
        'OgreMain/include/OgreCustomCompositionPass.h',
        'OgreMain/include/OgreDDSCodec2.h',
        'OgreMain/include/OgreDataStream.h',
        'OgreMain/include/OgreDecal.h',
        'OgreMain/include/OgreDefaultHardwareBufferManager.h',
        'OgreMain/include/OgreDeflate.h',
        'OgreMain/include/OgreDepthBuffer.h',
        'OgreMain/include/OgreDescriptorSetSampler.h',
        'OgreMain/include/OgreDescriptorSetTexture.h',
        'OgreMain/include/OgreDescriptorSetUav.h',
        'OgreMain/include/OgreDistanceLodStrategy.h',
        'OgreMain/include/OgreDualQuaternion.h',
        'OgreMain/include/OgreDynLib.h',
        'OgreMain/include/OgreDynLibManager.h',
        'OgreMain/include/OgreETCCodec.h',
        'OgreMain/include/OgreEdgeListBuilder.h',
        'OgreMain/include/OgreEntity.h',
        'OgreMain/include/OgreErrorDialog.h',
        'OgreMain/include/OgreException.h',
        'OgreMain/include/OgreExternalTextureSource.h',
        'OgreMain/include/OgreExternalTextureSourceManager.h',
        'OgreMain/include/OgreFactoryObj.h',
        'OgreMain/include/OgreFastArray.h',
        'OgreMain/include/OgreFileSystem.h',
        'OgreMain/include/OgreFileSystemLayer.h',
        'OgreMain/include/OgreForward3D.h',
        'OgreMain/include/OgreForwardClustered.h',
        'OgreMain/include/OgreForwardPlusBase.h',
        'OgreMain/include/OgreFrameListener.h',
        'OgreMain/include/OgreFrameStats.h',
        'OgreMain/include/OgreFreeImageCodec2.h',
        'OgreMain/include/OgreFrustum.h',
        'OgreMain/include/OgreGpuProgram.h',
        'OgreMain/include/OgreGpuProgramManager.h',
        'OgreMain/include/OgreGpuProgramParams.h',
        'OgreMain/include/OgreGpuProgramUsage.h',
        'OgreMain/include/OgreGpuResource.h',
        'OgreMain/include/OgreHardwareBuffer.h',
        'OgreMain/include/OgreHardwareBufferManager.h',
        'OgreMain/include/OgreHardwareCounterBuffer.h',
        'OgreMain/include/OgreHardwareIndexBuffer.h',
        'OgreMain/include/OgreHardwareOcclusionQuery.h',
        'OgreMain/include/OgreHardwareUniformBuffer.h',
        'OgreMain/include/OgreHardwareVertexBuffer.h',
        'OgreMain/include/OgreHeaderPrefix.h',
        'OgreMain/include/OgreHeaderSuffix.h',
        'OgreMain/include/OgreHiddenAreaMeshVr.h',
        'OgreMain/include/OgreHighLevelGpuProgram.h',
        'OgreMain/include/OgreHighLevelGpuProgramManager.h',
        'OgreMain/include/OgreHlms.h',
        'OgreMain/include/OgreHlmsCommon.h',
        'OgreMain/include/OgreHlmsCompute.h',
        'OgreMain/include/OgreHlmsComputeJob.h',
        'OgreMain/include/OgreHlmsDatablock.h',
        'OgreMain/include/OgreHlmsDiskCache.h',
        'OgreMain/include/OgreHlmsJson.h',
        'OgreMain/include/OgreHlmsJsonCompute.h',
        'OgreMain/include/OgreHlmsListener.h',
        'OgreMain/include/OgreHlmsLowLevel.h',
        'OgreMain/include/OgreHlmsLowLevelDatablock.h',
        'OgreMain/include/OgreHlmsManager.h',
        'OgreMain/include/OgreHlmsPso.h',
        'OgreMain/include/OgreHlmsSamplerblock.h',
        'OgreMain/include/OgreHlmsTexturePack.h',
        'OgreMain/include/OgreId.h',
        'OgreMain/include/OgreIdString.h',
        'OgreMain/include/OgreImage2.h',
        'OgreMain/include/OgreImageCodec2.h',
        'OgreMain/include/OgreImageDownsampler.h',
        'OgreMain/include/OgreInternalCubemapProbe.h',
        'OgreMain/include/OgreItem.h',
        'OgreMain/include/OgreIteratorRange.h',
        'OgreMain/include/OgreIteratorWrapper.h',
        'OgreMain/include/OgreIteratorWrappers.h',
        'OgreMain/include/OgreKeyFrame.h',
        'OgreMain/include/OgreLight.h',
        'OgreMain/include/OgreLight.inl',
        'OgreMain/include/OgreLodListener.h',
        'OgreMain/include/OgreLodStrategy.h',
        'OgreMain/include/OgreLodStrategyManager.h',
        'OgreMain/include/OgreLodStrategyPrivate.inl',
        'OgreMain/include/OgreLog.h',
        'OgreMain/include/OgreLogManager.h',
        'OgreMain/include/OgreLwConstString.h',
        'OgreMain/include/OgreLwString.h',
        'OgreMain/include/OgreManualObject.h',
        'OgreMain/include/OgreManualObject2.h',
        'OgreMain/include/OgreMaterial.h',
        'OgreMain/include/OgreMaterialManager.h',
        'OgreMain/include/OgreMaterialSerializer.h',
        'OgreMain/include/OgreMath.h',
        'OgreMain/include/OgreMatrix3.h',
        'OgreMain/include/OgreMatrix4.h',
        'OgreMain/include/OgreMemoryAllocatedObject.h',
        'OgreMain/include/OgreMemoryAllocatorConfig.h',
        'OgreMain/include/OgreMemoryNedAlloc.h',
        'OgreMain/include/OgreMemoryNedPooling.h',
        'OgreMain/include/OgreMemorySTLAllocator.h',
        'OgreMain/include/OgreMemoryStdAlloc.h',
        'OgreMain/include/OgreMemoryTrackAlloc.h',
        'OgreMain/include/OgreMemoryTracker.h',
        'OgreMain/include/OgreMesh.h',
        'OgreMain/include/OgreMesh2.h',
        'OgreMain/include/OgreMesh2Serializer.h',
        'OgreMain/include/OgreMesh2SerializerImpl.h',
        'OgreMain/include/OgreMeshFileFormat.h',
        'OgreMain/include/OgreMeshManager.h',
        'OgreMain/include/OgreMeshManager2.h',
        'OgreMain/include/OgreMeshSerializer.h',
        'OgreMain/include/OgreMeshSerializerImpl.h',
        'OgreMain/include/OgreMovableObject.h',
        'OgreMain/include/OgreMovableObject.inl',
        'OgreMain/include/OgreMovablePlane.h',
        'OgreMain/include/OgreNameGenerator.h',
        'OgreMain/include/OgreNode.h',
        'OgreMain/include/OgreNumerics.h',
        'OgreMain/include/OgreOITDCodec.h',
        'OgreMain/include/OgreObjCmdBuffer.h',
        'OgreMain/include/OgreOfflineProfiler.h',
        'OgreMain/include/OgreOldBone.h',
        'OgreMain/include/OgreOldNode.h',
        'OgreMain/include/OgreOldSkeletonInstance.h',
        'OgreMain/include/OgreOldSkeletonManager.h',
        'OgreMain/include/OgreOptimisedUtil.h',
        'OgreMain/include/OgrePVRTCCodec.h',
        'OgreMain/include/OgreParticle.h',
        'OgreMain/include/OgreParticleAffector.h',
        'OgreMain/include/OgreParticleAffectorFactory.h',
        'OgreMain/include/OgreParticleEmitter.h',
        'OgreMain/include/OgreParticleEmitterCommands.h',
        'OgreMain/include/OgreParticleEmitterFactory.h',
        'OgreMain/include/OgreParticleIterator.h',
        'OgreMain/include/OgreParticleSystem.h',
        'OgreMain/include/OgreParticleSystemManager.h',
        'OgreMain/include/OgreParticleSystemRenderer.h',
        'OgreMain/include/OgrePass.h',
        'OgreMain/include/OgrePatchMesh.h',
        'OgreMain/include/OgrePatchSurface.h',
        'OgreMain/include/OgrePixelCountLodStrategy.h',
        'OgreMain/include/OgrePixelFormatGpu.h',
        'OgreMain/include/OgrePixelFormatGpuUtils.h',
        'OgreMain/include/OgrePlane.h',
        'OgreMain/include/OgrePlaneBoundedVolume.h',
        'OgreMain/include/OgrePlatform.h',
        'OgreMain/include/OgrePlatformInformation.h',
        'OgreMain/include/OgrePlugin.h',
        'OgreMain/include/OgrePolygon.h',
        'OgreMain/include/OgrePose.h',
        'OgreMain/include/OgrePredefinedControllers.h',
        'OgreMain/include/OgrePrefabFactory.h',
        'OgreMain/include/OgrePrerequisites.h',
        'OgreMain/include/OgreProfiler.h',
        'OgreMain/include/OgreProfilerCommon.h',
        'OgreMain/include/OgrePsoCacheHelper.h',
        'OgreMain/include/OgreQuaternion.h',
        'OgreMain/include/OgreRadialDensityMask.h',
        'OgreMain/include/OgreRadixSort.h',
        'OgreMain/include/OgreRawPtr.h',
        'OgreMain/include/OgreRay.h',
        'OgreMain/include/OgreRectangle2D.h',
        'OgreMain/include/OgreRectangle2D2.h',
        'OgreMain/include/OgreRenderObjectListener.h',
        'OgreMain/include/OgreRenderOperation.h',
        'OgreMain/include/OgreRenderPassDescriptor.h',
        'OgreMain/include/OgreRenderQueue.h',
        'OgreMain/include/OgreRenderQueueListener.h',
        'OgreMain/include/OgreRenderSystem.h',
        'OgreMain/include/OgreRenderSystemCapabilities.h',
        'OgreMain/include/OgreRenderSystemCapabilitiesManager.h',
        'OgreMain/include/OgreRenderSystemCapabilitiesSerializer.h',
        'OgreMain/include/OgreRenderable.h',
        'OgreMain/include/OgreResource.h',
        'OgreMain/include/OgreResourceBackgroundQueue.h',
        'OgreMain/include/OgreResourceGroupManager.h',
        'OgreMain/include/OgreResourceManager.h',
        'OgreMain/include/OgreResourceTransition.h',
        'OgreMain/include/OgreRibbonTrail.h',
        'OgreMain/include/OgreRoot.h',
        'OgreMain/include/OgreRotationalSpline.h',
        'OgreMain/include/OgreSTBICodec.h',
        'OgreMain/include/OgreSceneManager.h',
        'OgreMain/include/OgreSceneManagerEnumerator.h',
        'OgreMain/include/OgreSceneNode.h',
        'OgreMain/include/OgreSceneQuery.h',
        'OgreMain/include/OgreScriptCompiler.h',
        'OgreMain/include/OgreScriptLexer.h',
        'OgreMain/include/OgreScriptLoader.h',
        'OgreMain/include/OgreScriptParser.h',
        'OgreMain/include/OgreScriptTranslator.h',
        'OgreMain/include/OgreSearchOps.h',
        'OgreMain/include/OgreSerializer.h',
        'OgreMain/include/OgreShaderParams.h',
        'OgreMain/include/OgreShaderPrimitives.h',
        'OgreMain/include/OgreShadowCameraSetup.h',
        'OgreMain/include/OgreShadowCameraSetupFocused.h',
        'OgreMain/include/OgreShadowCameraSetupPSSM.h',
        'OgreMain/include/OgreShadowCameraSetupPlaneOptimal.h',
        'OgreMain/include/OgreShadowVolumeExtrudeProgram.h',
        'OgreMain/include/OgreSharedPtr.h',
        'OgreMain/include/OgreSimpleRenderable.h',
        'OgreMain/include/OgreSimpleSpline.h',
        'OgreMain/include/OgreSingleton.h',
        'OgreMain/include/OgreSkeleton.h',
        'OgreMain/include/OgreSkeletonFileFormat.h',
        'OgreMain/include/OgreSkeletonSerializer.h',
        'OgreMain/include/OgreSmallVector.h',
        'OgreMain/include/OgreSphere.h',
        'OgreMain/include/OgreStableHeaders.h',
        'OgreMain/include/OgreStackVector.h',
        'OgreMain/include/OgreStagingTexture.h',
        'OgreMain/include/OgreStagingTextureBufferImpl.h',
        'OgreMain/include/OgreStagingTextureManager.h',
        'OgreMain/include/OgreStaticFaceGroup.h',
        'OgreMain/include/OgreStaticGeometry.h',
        'OgreMain/include/OgreStdHeaders.h',
        'OgreMain/include/OgreStreamSerialiser.h',
        'OgreMain/include/OgreString.h',
        'OgreMain/include/OgreStringConverter.h',
        'OgreMain/include/OgreStringInterface.h',
        'OgreMain/include/OgreStringVector.h',
        'OgreMain/include/OgreSubEntity.h',
        'OgreMain/include/OgreSubItem.h',
        'OgreMain/include/OgreSubMesh.h',
        'OgreMain/include/OgreSubMesh2.h',
        'OgreMain/include/OgreTagPoint.h',
        'OgreMain/include/OgreTangentSpaceCalc.h',
        'OgreMain/include/OgreTechnique.h',
        'OgreMain/include/OgreTextureBox.h',
        'OgreMain/include/OgreTextureFilters.h',
        'OgreMain/include/OgreTextureGpu.h',
        'OgreMain/include/OgreTextureGpuListener.h',
        'OgreMain/include/OgreTextureGpuManager.h',
        'OgreMain/include/OgreTextureGpuManagerListener.h',
        'OgreMain/include/OgreTextureUnitState.h',
        'OgreMain/include/OgreTimer.h',
        'OgreMain/include/OgreUTFString.h',
        'OgreMain/include/OgreUnifiedHighLevelGpuProgram.h',
        'OgreMain/include/OgreUserObjectBindings.h',
        'OgreMain/include/OgreVector2.h',
        'OgreMain/include/OgreVector3.h',
        'OgreMain/include/OgreVector4.h',
        'OgreMain/include/OgreVertexBoneAssignment.h',
        'OgreMain/include/OgreVertexIndexData.h',
        'OgreMain/include/OgreVertexShadowMapHelper.h',
        'OgreMain/include/OgreViewport.h',
        'OgreMain/include/OgreVisibilityFlags.h',
        'OgreMain/include/OgreWindow.h',
        'OgreMain/include/OgreWindowEventUtilities.h',
        'OgreMain/include/OgreWireAabb.h',
        'OgreMain/include/OgreWireBoundingBox.h',
        'OgreMain/include/OgreWorkQueue.h',
        'OgreMain/include/OgreWorkarounds.h',
        'OgreMain/include/OgreZip.h',
        'OgreMain/include/Threading/OgreBarrier.h',
        'OgreMain/include/Threading/OgreDefaultWorkQueue.h',
        'OgreMain/include/Threading/OgreDefaultWorkQueueStandard.h',
        'OgreMain/include/Threading/OgreDefaultWorkQueueTBB.h',
        'OgreMain/include/Threading/OgreLightweightMutex.h',
        'OgreMain/include/Threading/OgreThreadDefines.h',
        'OgreMain/include/Threading/OgreThreadDefinesBoost.h',
        'OgreMain/include/Threading/OgreThreadDefinesNone.h',
        'OgreMain/include/Threading/OgreThreadDefinesPoco.h',
        'OgreMain/include/Threading/OgreThreadDefinesSTD.h',
        'OgreMain/include/Threading/OgreThreadDefinesTBB.h',
        'OgreMain/include/Threading/OgreThreadHeaders.h',
        'OgreMain/include/Threading/OgreThreadHeadersBoost.h',
        'OgreMain/include/Threading/OgreThreadHeadersPoco.h',
        'OgreMain/include/Threading/OgreThreadHeadersSTD.h',
        'OgreMain/include/Threading/OgreThreadHeadersTBB.h',
        'OgreMain/include/Threading/OgreThreads.h',
        'OgreMain/include/Threading/OgreUniformScalableTask.h',
        'OgreMain/include/Threading/OgreWaitableEvent.h',
        'OgreMain/include/Vao/OgreAsyncTicket.h',
        'OgreMain/include/Vao/OgreBufferInterface.h',
        'OgreMain/include/Vao/OgreBufferPacked.h',
        'OgreMain/include/Vao/OgreConstBufferPacked.h',
        'OgreMain/include/Vao/OgreIndexBufferPacked.h',
        'OgreMain/include/Vao/OgreIndirectBufferPacked.h',
        'OgreMain/include/Vao/OgreMultiSourceVertexBufferPool.h',
        'OgreMain/include/Vao/OgreStagingBuffer.h',
        'OgreMain/include/Vao/OgreTexBufferPacked.h',
        'OgreMain/include/Vao/OgreUavBufferPacked.h',
        'OgreMain/include/Vao/OgreVaoManager.h',
        'OgreMain/include/Vao/OgreVertexArrayObject.h',
        'OgreMain/include/Vao/OgreVertexBufferDownloadHelper.h',
        'OgreMain/include/Vao/OgreVertexBufferPacked.h',
        'OgreMain/include/Vao/OgreVertexElements.h',
        # Win32
        #'src/WIN32/OgreWin32Resources.rc',
        'OgreMain/src/WIN32/resource.h',
        # 'src/WIN32/ogrelogo.bmp',
        # 'src/WIN32/ogre.ico',
        # 'OgreMain/include/WIN32/OgreMinGWSupport.h',
        'OgreMain/include/WIN32/OgreComPtr.h',
        'OgreMain/include/WIN32/OgreConfigDialogImp.h',
        'OgreMain/include/WIN32/OgreConfigDialogImpWinRT.h',
        'OgreMain/include/WIN32/OgreErrorDialogImp.h',
        'OgreMain/include/WIN32/OgreErrorDialogImpWinRT.h',
        'OgreMain/include/WIN32/OgreTimerImp.h',
        'OgreMain/include/asm_math.h',
        #'OgreMain/include/debugbreak/debugbreak-gdb.py',
        'OgreMain/include/debugbreak/debugbreak.h',
        'OgreMain/include/gtk/OgreConfigDialogImp.h',
        'OgreMain/include/gtk/OgreErrorDialogImp.h',
        #'../hardcoded/OgreBuildSettings.h',
        # 'OgreMain/include/iOS/OgreConfigDialogImp.h',
        # 'OgreMain/include/iOS/OgreErrorDialogImp.h',
        # 'OgreMain/include/iOS/OgreOSXCocoaTouchView.h',
        # 'OgreMain/include/iOS/OgreTimerImp.h',
        # 'OgreMain/include/iOS/macUtils.h',
   ],
)

cc_import(
    name = "OgreOverlayBin",
    shared_library    = "build/bin/debug/OgreOverlay_d.dll",
    static_library    = "build/lib/Debug/OgreOverlay_d.lib",
    # static_library   = "build/lib/Debug/OgreMain_d.lib",
    hdrs = [],
    )

cc_library(
    name = "OgreOverlay",
    deps = ["OgreOverlayBin"],
    includes = ['Components/Overlay/include'],
    )

cc_library(
    name = "OgreHlmsCommonHeaders",
    includes = ['Components/Hlms/Common/include'])

cc_import(
    name = "OgreHlmsUnlitBin",
    shared_library    = "build/bin/debug/OgreHlmsUnlit_d.dll",
    static_library    = "build/lib/Debug/OgreHlmsUnlit_d.lib",
    # static_library  = "build/lib/Debug/OgreMain_d.lib",
    hdrs = [],
    )

cc_library(
    name = "OgreHlmsUnlit",
    deps = [
        "OgreHlmsUnlitBin",
        "OgreHlmsCommonHeaders",
    ],
    includes = ['Components/Hlms/Unlit/include'])

cc_import(
    name = "OgreHlmsPbsBin",
    shared_library   = "build/bin/debug/OgreHlmsPbs_d.dll",
    static_library   = "build/lib/Debug/OgreHlmsPbs_d.lib",
    # static_library = "build/lib/Debug/OgreMain_d.lib",
    hdrs = [],
    )

cc_library(
    name = "OgreHlmsPbs",
    deps = [
        "OgreHlmsPbsBin",
        "OgreHlmsCommonHeaders",
    ],
    includes = ['Components/Hlms/Pbs/include'])

cc_library(
    name = "OgreMain",
    srcs = [
       "build/lib/Debug/OgreMain_d.lib",
       "build/lib/Debug/OgreHlmsPbs_d.lib",
       "build/lib/Debug/OgreHlmsUnlit_d.lib",
       "build/lib/Debug/OgreMeshLodGenerator_d.lib",
       "build/lib/Debug/OgreOverlay_d.lib",
       "build/lib/Debug/OgreSamplesCommon_d.lib",
       "build/lib/Debug/OgreSceneFormat_d.lib",
       "build/lib/Debug/Plugin_ParticleFX_d.lib",
       "build/lib/Debug/RenderSystem_Direct3D11_d.lib",
       "build/lib/Debug/RenderSystem_GL3Plus_d.lib",

       # "build/bin/debug/OgreMain_d.dll",
       # "build/bin/debug/OgreHlmsPbs_d.dll",
       # "build/bin/debug/OgreHlmsUnlit_d.dll",
       # "build/bin/debug/OgreMeshLodGenerator_d.dll",
       # "build/bin/debug/OgreOverlay_d.dll",
       # "build/bin/debug/OgreSceneFormat_d.dll",
       # "build/bin/debug/Plugin_ParticleFX_d.dll",
       # "build/bin/debug/RenderSystem_Direct3D11_d.dll",
       # "build/bin/debug/RenderSystem_GL3Plus_d.dll",

       # "build/lib/Release/OgreMain.lib",
       # "build/lib/Release/OgreHlmsPbs.lib",
       # "build/lib/Release/OgreHlmsUnlit.lib",
       # "build/lib/Release/OgreMeshLodGenerator.lib",
       # "build/lib/Release/OgreOverlay.lib",
       # "build/lib/Release/OgreSamplesCommon.lib",
       # "build/lib/Release/OgreSceneFormat.lib",
       # "build/bin/release/Plugin_ParticleFX.dll",
       # "build/bin/release/RenderSystem_Direct3D11.dll",
       # "build/bin/release/RenderSystem_GL3Plus.dll",

       #"build/lib/Release/Plugin_ParticleFX.lib",
       #"build/lib/Release/RenderSystem_Direct3D11.lib",
       #"build/lib/Release/RenderSystem_GL3Plus.lib",

       #"build/bin/release/OgreMain.dll",
       #"build/bin/release/OgreHlmsPbs.dll",
       #"build/bin/release/OgreHlmsUnlit.dll",
       #"build/bin/release/OgreMeshLodGenerator.dll",
       #"build/bin/release/OgreOverlay.dll",
       #"build/bin/release/OgreSceneFormat.dll",

      #"build/lib/Debug/RenderSystem_NULL_d.lib",
    ],
    hdrs = glob([
        "OgreMain/include/*.h"
    ]),
    includes = [
        "OgreMain/include",
        "build/include",
        "Components/Hlms/Pbs/include",
        "Components/Hlms/Common/include",
        "Components/Hlms/Unlit/include",
        "Components/Overlay/include",
    ],
)
